k8s/app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  labels:
    component: app
spec:
  containers:
    - name: conam
      image: leandrosoares/conam
      ports:
        - containerPort: 3000
