k8s/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: broker
  template:
    metadata:
      labels:
        component: broker
    spec:
      containers:
        - name: broker
          image: confluentinc/cp-kafka:7.3.0
          ports:
            - containerPort: 9092
