k8s/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
    spec:
      containers:
        - name: conam-nginx
          image: leandrosoares/conam-nginx
          ports:
            - containerPort: 80
          imagePullPolicy: Always
