k8s/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    component: nginx
spec:
  containers:
    - name: nginx-conam
      image: leandrosoares/conam-nginx
      ports:
        - containerPort: 80
