k8s/app-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: app
  ports:  
    - port: 80
      targetPort: 80
