k8s/app-node-pod.yml
apiVersion: v1
kind: Service
metadata:
  name: app-node-port
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31515
  selector:
    component: app
