k8s/broker-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: broker
  ports:
    - port: 9092
      targetPort: 9092
