k8s/portal-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: portal-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: portal
  ports:  
    - port: 8080
      targetPort: 80
