k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /app/?(.*)
            pathType: Prefix
            backend:
              service:
                name: app-cluster-ip-service
                port:
                  number: 80
          - path: /portal/?(.*)
            pathType: Prefix
            backend:
              service:
                name: portal-cluster-ip-service
                port:
                  number: 80
